2008-04-14  Øyvind Kolås  <pippin@o-hand.com>

	* README: removed API documentation from list of items, since the
	preliminary documentation is in place.
	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h: added get|set_linear_velocity and
	_angular_velocity methods.
	* doc/reference/clutter-box2d-sections.txt:
	* examples/actor-manipulator.c: (action_set_linear_velocity),
	(actor_manipulator_press): added a menu item for setting the linear
	velocity.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h: expose "simulating" as a property of
	ClutterBox2D.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp:
	* clutter-box2d/clutter-box2d.h:
	* doc/reference/clutter-box2d-sections.txt: Improved coverage of
	documentation.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* box2d/Makefile.am:
	* clutter-box2d/Makefile.am:
	* examples/Makefile.am: add more files to distribution making
	clutter-box2d pass distcheck.

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* examples/blockbox.c: (init_scenes), (keep_on_top),
	(add_controls), (main): make controls stay on top through a timeout, 
	* examples/util.c: (add_cage): even when a stage cage without roof is
	requested, create a roof ~ 8 stages up beyond the stage.

	Modified all scenes to work reasonably well for most stage sizes.

	* examples/scene-distance-joint.c: (scene_distance_joint): made the
	scene consist of three linked hands, since this makes the functioning
	of the distance joint more apparent.
	* examples/scene-bridge.c: (scene_bridge):
	* examples/scene-chain.c: (scene_chain):
	* examples/scene-slides.c: (scene_slides):

2008-04-11  Øyvind Kolås  <pippin@o-hand.com>

	* README: updated.
	* clutter-box2d/clutter-box2d.cpp: add clutter_box2d_new(), renamed
	clutter_box2d_set_playing to clutter_box2d_set_simulating, implemented
	clutter_box2d_actor_set_bullet.