@@ -34,6 +34,8 @@ clutter_box2d_actor_get_linear_velocity
 clutter_box2d_actor_set_angular_velocity
 clutter_box2d_actor_set_linear_velocity
 clutter_box2d_actor_apply_force
+clutter_box2d_actor_apply_impulse
+clutter_box2d_actor_apply_torque
 </SECTION>
 
 <SECTION>
